--- a/addons/ccm-aws/ccm-aws.yaml
+++ b/addons/ccm-aws/ccm-aws.yaml
@@ -1,4 +1,3 @@
-# helm template aws-cloud-controller-manager aws-cloud-controller-manager/aws-cloud-controller-manager
 ---
 # Source: aws-cloud-controller-manager/templates/serviceaccount.yaml
 apiVersion: v1
@@ -6,12 +5,16 @@ kind: ServiceAccount
 metadata:
   name: cloud-controller-manager
   namespace: kube-system
+  labels:
+    helm.sh/chart: "aws-cloud-controller-manager-0.0.7"
 ---
 # Source: aws-cloud-controller-manager/templates/clusterrole.yaml
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: system:cloud-controller-manager
+  labels:
+    helm.sh/chart: "aws-cloud-controller-manager-0.0.7"
 rules:
   - apiGroups:
     - ""
@@ -98,6 +101,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: system:cloud-controller-manager
+  labels:
+    helm.sh/chart: "aws-cloud-controller-manager-0.0.7"
 roleRef:
   kind: ClusterRole
   name: system:cloud-controller-manager
@@ -114,6 +119,8 @@ kind: RoleBinding
 metadata:
   name: cloud-controller-manager:apiserver-authentication-reader
   namespace: kube-system
+  labels:
+    helm.sh/chart: "aws-cloud-controller-manager-0.0.7"
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -131,18 +138,19 @@ metadata:
   name: aws-cloud-controller-manager
   labels:
     k8s-app:  aws-cloud-controller-manager
+    helm.sh/chart: "aws-cloud-controller-manager-0.0.7"
   namespace: kube-system
 spec:
   selector:
     matchLabels:
-      k8s-app: aws-cloud-controller-manager
+      k8s-app:  aws-cloud-controller-manager
   updateStrategy:
     type: RollingUpdate
   template:
     metadata:
       name: aws-cloud-controller-manager
       labels:
-        k8s-app: aws-cloud-controller-manager
+        k8s-app:  aws-cloud-controller-manager
     spec:
       tolerations:
         - effect: NoSchedule
@@ -157,6 +165,8 @@ spec:
       dnsPolicy: Default
       priorityClassName: system-node-critical
       serviceAccountName: cloud-controller-manager
+      securityContext:
+        {}
       containers:
         - name: aws-cloud-controller-manager
           image: "{{ .InternalImages.Get "AwsCCM" }}"
@@ -170,6 +180,10 @@ spec:
           resources:
             requests:
               cpu: 200m
+          env:
+            []
+          securityContext:
+            {}
           volumeMounts:
             - mountPath: /etc/kubernetes/cloud
               name: cloud-config
