Dual Stack support for vSphere (#2806)
* Update vSphere example to support dualstack networking

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Update vSphere CCM to support dual stack networking

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Whitelist vSphere for IPv4+IPv6 IP family

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Refactored code

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Enable IPv6 forwarding

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Add E2E tests for vSphere dualstack

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Apply route advertisement fix to all interfaces

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Minor nits

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Refactored code

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

---------

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/addons/ccm-vsphere/ccm-vsphere.yaml
+++ b/addons/ccm-vsphere/ccm-vsphere.yaml
@@ -188,8 +188,10 @@ spec:
           args:
             - --cloud-provider=vsphere
             - --cloud-config=/etc/cloud/cloud-config
-{{ if .Config.CABundle }}
           env:
+            - name: ENABLE_ALPHA_DUAL_STACK
+              value: "{{ .Config.ClusterNetwork.IPFamily.IsDualstack }}"
+{{ if .Config.CABundle }}
 {{ caBundleEnvVar | indent 12 }}
 {{ end }}
           volumeMounts:
