Review fixes for vSphere CSI driver update
Signed-off-by: Artiom Diomin <artiom@kubermatic.com>

--- a/addons/csi-vsphere/vsphere-csi-driver.yaml
+++ b/addons/csi-vsphere/vsphere-csi-driver.yaml
@@ -166,13 +166,13 @@ roleRef:
 ---
 apiVersion: v1
 data:
-  "csi-migration": "true"
+  "csi-migration": "{{ .CSIMigration }}"
   "csi-auth-check": "true"
   "online-volume-extend": "true"
   "trigger-csi-fullsync": "false"
   "async-query-volume": "true"
   "block-volume-snapshot": "true"
-  "csi-windows-support": "true"
+  "csi-windows-support": "false"
   "use-csinode-id": "true"
   "list-volumes": "true"
   "pv-to-backingdiskobjectid-mapping": "false"
