--- a/addons/default-storage-class/storage-class.yaml
+++ b/addons/default-storage-class/storage-class.yaml
@@ -1,5 +1,6 @@
 {{ if eq .Config.CloudProvider.CloudProviderName "azure" }}
 {{ if .DeployCSIAddon }}
+---
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
@@ -27,7 +28,17 @@ parameters:
 reclaimPolicy: Delete
 volumeBindingMode: Immediate
 ---
+kind: VolumeSnapshotClass
+apiVersion: snapshot.storage.k8s.io/v1
+metadata:
+  name: csi-azuredisk-vsc
+driver: disk.csi.azure.com
+deletionPolicy: Delete
+parameters:
+  incremental: "true"
+  tags:
 {{ end }}
+---
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
