Update AWS EBS CSI driver to v1.22.0
Signed-off-by: Artiom Diomin <artiom@kubermatic.com>

--- a/addons/csi-aws-ebs/csi-aws-ebs.yaml
+++ b/addons/csi-aws-ebs/csi-aws-ebs.yaml
@@ -8,8 +8,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.20.0
-    app.kubernetes.io/version: "1.20.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.22.0
+    app.kubernetes.io/version: "1.22.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 spec:
@@ -29,8 +29,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.20.0
-    app.kubernetes.io/version: "1.20.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.22.0
+    app.kubernetes.io/version: "1.22.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 automountServiceAccountToken: true
@@ -44,8 +44,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.20.0
-    app.kubernetes.io/version: "1.20.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.22.0
+    app.kubernetes.io/version: "1.22.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 automountServiceAccountToken: true
@@ -58,8 +58,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.20.0
-    app.kubernetes.io/version: "1.20.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.22.0
+    app.kubernetes.io/version: "1.22.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 rules:
@@ -87,8 +87,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.20.0
-    app.kubernetes.io/version: "1.20.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.22.0
+    app.kubernetes.io/version: "1.22.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 rules:
@@ -104,8 +104,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.20.0
-    app.kubernetes.io/version: "1.20.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.22.0
+    app.kubernetes.io/version: "1.22.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 rules:
@@ -145,8 +145,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.20.0
-    app.kubernetes.io/version: "1.20.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.22.0
+    app.kubernetes.io/version: "1.22.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 rules:
@@ -182,8 +182,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.20.0
-    app.kubernetes.io/version: "1.20.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.22.0
+    app.kubernetes.io/version: "1.22.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 rules:
@@ -215,8 +215,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.20.0
-    app.kubernetes.io/version: "1.20.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.22.0
+    app.kubernetes.io/version: "1.22.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 subjects:
@@ -236,8 +236,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.20.0
-    app.kubernetes.io/version: "1.20.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.22.0
+    app.kubernetes.io/version: "1.22.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 subjects:
@@ -257,8 +257,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.20.0
-    app.kubernetes.io/version: "1.20.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.22.0
+    app.kubernetes.io/version: "1.22.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 subjects:
@@ -278,8 +278,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.20.0
-    app.kubernetes.io/version: "1.20.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.22.0
+    app.kubernetes.io/version: "1.22.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 subjects:
@@ -299,8 +299,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.20.0
-    app.kubernetes.io/version: "1.20.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.22.0
+    app.kubernetes.io/version: "1.22.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 subjects:
@@ -332,8 +332,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.20.0
-    app.kubernetes.io/version: "1.20.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.22.0
+    app.kubernetes.io/version: "1.22.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 subjects:
@@ -355,8 +355,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.20.0
-    app.kubernetes.io/version: "1.20.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.22.0
+    app.kubernetes.io/version: "1.22.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 spec:
@@ -375,8 +375,8 @@ spec:
         app: ebs-csi-node
         app.kubernetes.io/name: aws-ebs-csi-driver
         app.kubernetes.io/instance: aws-ebs-csi-driver
-        helm.sh/chart: aws-ebs-csi-driver-2.20.0
-        app.kubernetes.io/version: "1.20.0"
+        helm.sh/chart: aws-ebs-csi-driver-2.22.0
+        app.kubernetes.io/version: "1.22.0"
         app.kubernetes.io/component: csi-driver
         app.kubernetes.io/managed-by: Helm
     spec:
@@ -529,8 +529,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.20.0
-    app.kubernetes.io/version: "1.20.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.22.0
+    app.kubernetes.io/version: "1.22.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 spec:
@@ -550,8 +550,8 @@ spec:
         app: ebs-csi-controller
         app.kubernetes.io/name: aws-ebs-csi-driver
         app.kubernetes.io/instance: aws-ebs-csi-driver
-        helm.sh/chart: aws-ebs-csi-driver-2.20.0
-        app.kubernetes.io/version: "1.20.0"
+        helm.sh/chart: aws-ebs-csi-driver-2.22.0
+        app.kubernetes.io/version: "1.22.0"
         app.kubernetes.io/component: csi-driver
         app.kubernetes.io/managed-by: Helm
     spec:
@@ -615,6 +615,12 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: spec.nodeName
+            - name: AWS_EC2_ENDPOINT
+              valueFrom:
+                configMapKeyRef:
+                  name: aws-meta
+                  key: endpoint
+                  optional: true
           volumeMounts:
             - name: socket-dir
               mountPath: /var/lib/csi/sockets/pluginproxy/
@@ -768,8 +774,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.20.0
-    app.kubernetes.io/version: "1.20.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.22.0
+    app.kubernetes.io/version: "1.22.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 spec:
